add extend to task_list.html

--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -1,7 +1,7 @@
-{% include "base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
-  <h1>
+  <h1 class="d-flex justify-content-between">
     TODO list
     <a href="#" class="btn btn-primary link-to-page">
       Add task
