--- a/templates/base.html
+++ b/templates/base.html
@@ -22,10 +22,11 @@
       {% endblock %}
 
     </div>
-    <div class="col-sm-10 ">
-
-      {% block content %}{% endblock %}
-
+    <div class="col-sm-10">
+      <div class="m-3">
+        {% block content %}{% endblock %}
+      </div>
+    
     </div>
   </div>
 </div>
