--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -1,20 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1 class="d-flex justify-content-between">
+  <h1 class="d-flex justify-content-between align-items-center">
     TODO list
-    <a href="#" class="btn btn-primary link-to-page">
+    <a href="#" class="btn btn-primary link-to-page me-3">
       Add task
     </a>
   </h1>
   <ul class="list-group">
     {% for task in tasks %}
       <li class="list-group-item">
-        <h5 class="fw-bold">
-          {{ task.content }}
-          <span class="text-{{ task.done|yesno:"success,danger" }}">
+        <h5 class="fw-bold d-flex justify-content-between">
+          <span class="me-3">{{ task.content }}</span>
+          <span class="text-{{ task.done|yesno:"success,danger" }} me-auto">
               {{ task.done|yesno:"Done,Not done" }}
             </span>
+          <a href="#" class="btn btn-{{ task.done|yesno:"secondary,success" }} link-to-page">
+            {{ task.done|yesno:"Undo,Complete" }}
+          </a>
         </h5>
         <p>Created: {{ task.datetime }}</p>
         <p>Deadline:
