--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,4 +1,4 @@
 <ul class="sidebar-nav list-group mt-3">
   <li class="list-group-item"><a class="h5 nav-link" href="{% url 'tasks:index' %}">Home</a></li>
-  <li class="list-group-item"><a class="h5 nav-link" href="#">Tags</a></li>
+  <li class="list-group-item"><a class="h5 nav-link" href="{% url 'tasks:tags-list' %}">Tags</a></li>
 </ul>
