--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1 class="d-flex justify-content-between align-items-center">
     TODO list
-    <a href="#" class="btn btn-primary link-to-page me-3">
+    <a href="{% url 'tasks:task-create' %}" class="btn btn-primary link-to-page me-3">
       Add task
     </a>
   </h1>
