Add TagCreateView, add urls for create

--- a/templates/tasks/tags_list.html
+++ b/templates/tasks/tags_list.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1 class="d-flex justify-content-between align-items-center">
     Tags
-    <a href="#" class="btn btn-primary link-to-page me-3">
+    <a href="{% url 'tasks:tag-create' %}" class="btn btn-primary link-to-page me-3">
       Add
     </a>
   </h1>
