--- a/templates/tasks/tags_list.html
+++ b/templates/tasks/tags_list.html
@@ -21,7 +21,7 @@
           {{ tag.name }}
         </td>
         <td>
-          <a class="btn btn-secondary" href="#">
+          <a class="btn btn-secondary" href="{% url 'tasks:tag-update' pk=tag.pk %}">
             Update
           </a>
         </td>
