Add TagDeleteView adn urls for deletion

--- a/templates/tasks/tags_list.html
+++ b/templates/tasks/tags_list.html
@@ -26,7 +26,7 @@
           </a>
         </td>
         <td>
-          <a class="btn btn-secondary" href="#">
+          <a class="btn btn-secondary" href="{% url 'tasks:tag-delete' pk=tag.pk %}">
             Delete
           </a>
         </td>
