--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,10 @@
         {% block content %}{% endblock %}
       </div>
     
+      {% block pagination %}
+        {% include "includes/pagination.html" %}
+      {% endblock %}
+
     </div>
   </div>
 </div>
